UPDATE file5.html testing htmllint in ST3

--- a/file5.html
+++ b/file5.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>tesing git</title>
 </head>
-<body>
-<h1>Git Test</h1>
 
-<p>This is a paragraph.</p>
+<body>
+    <h1>Git Test</h1>
+    <p>This is a paragraph.</p>
+    <p>Testing Linter, not working</p>
+    <p>Fix this?</p>
 </body>
+
 </html>
